--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>Tela de login</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300;1,500;1,700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="container">
+        <form action="">
+            <h1> Entrar na platafoma</h1>
+            <div class="input-container">
+                <input placeholder="Email" type="Email" required>
+                <img width="20" height="20" src="https://img.icons8.com/ios-glyphs/30/user--v1.png" alt="user--v1" />
+            </div>
+            <div class="input-container">
+                <input placeholder="Senha" type="password" required>
+                <img width="20" height="20" src="https://img.icons8.com/ios-filled/50/password.png" alt="password" />
+                <div class="link-container">
+                <a href="#">Esqueci minha senha</a>
+            </div>
+            </div>
+
+            <button type="submit" class="submit-button">Entrar</button>
+
+            <div class="register-link">
+                <p> Nao está cadastrado ?<a href="#"> Cadastrar</a></p>
+            </div>
+        </form>
+    </div>
+
 </body>
+
 </html>
